--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+.fon
+{
+background-image:url("photografi/fon.jpg") ;
+background-repeat: no-repeat;
+background-size: cover;
+}
 .com
 {
 size: 200;
@@ -9,3 +15,36 @@ size: 200;
 .div1{
     size: 200;
 }
+.photo
+{
+    height: 250px;
+    width: 300px;
+}
+.red
+{
+    background: red;
+}
+.blue
+{
+    background: blue;
+}
+.bob1
+{
+    color: chocolate;
+}
+#test {
+    width: 100px;
+    background: #dfdfdf;
+    padding: 5px;
+    cursor: pointer;
+  }
+  
+#menu {
+    display: none;
+    margin-top: 10px;
+    width: 150px;
+    height: 150px;
+    background: #d3d3d3;
+  }
+
+
